// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@radio: matches snapshot active 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active checked: checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot active: default 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot checked disabled 1`] = `
<Wrapper
  checked={true}
  disabled={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot default 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot disabled 1`] = `
<Wrapper
  disabled={true}
  forwardedRef={null}
/>
`;

exports[`@radio: matches snapshot with text (styled) 1`] = `
<Wrapper
  forwardedRef={null}
  text="Place your text"
  textStyle={
    Object {
      "fontSize": 22,
      "lineHeight": 24,
    }
  }
/>
`;
